# Auto-typing

./: .gitignore  MAC_AUTOTYPER_PLAN.md  README.md  pyproject.toml
.github/workflows/: build-macos.yml
scripts/: macos_smoke_check.py
src/mac_auto_typer/: __init__.py  __main__.py  app.py  controller.py  core.py  hotkeys.py  input_blocker.py  logging_setup.py  permissions.py  text_io.py  typing_backend.py
tests/: test_controller.py  test_core.py
