[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-auto-typer"
version = "0.1.0"
description = "User-controlled macOS text auto typing utility."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Local Developer" }
]
dependencies = [
  "PySide6>=6.7,<7",
  "pynput>=1.7.7,<2",
  "pyobjc-framework-Quartz>=10.3; sys_platform == 'darwin'",
  "pyobjc-framework-ApplicationServices>=10.3; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pyinstaller>=6.6,<7",
]

[project.scripts]
mac-auto-typer = "mac_auto_typer.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
